# eval-run-manifest

./: README.md  pyproject.toml
examples/: eval_adapter_manifest.json  judge_bench_manifest.json
spec/: manifest-v1.json  manifest-v1.md
src/eval_run_manifest/: build.py  cli.py  sign.py  validate.py
tests/: test_manifest.py
