[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-run-manifest"
version = "0.1.1"
description = "Signed manifest envelope for eval runs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "AuraOne" }]
classifiers = ["Development Status :: 3 - Alpha", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12"]
dependencies = []

[project.urls]
Homepage = "https://auraone.ai/open"
Source = "https://github.com/auraoneai/eval-run-manifest"

[project.scripts]
eval-run-manifest = "eval_run_manifest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
